<resources>
    <string name="app_name">Where is my buddy</string>

    <string name="facebook_application_id" translatable="false">2059175784314554</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2059175784314554</string>
    <string name="twitter_consumer_key" translatable="false">mkdEeO5jD7yHxgaoGK5nBpx4G</string>
    <string name="twitter_consumer_secret" translatable="false">xo7uU8pY72nZnIQHho13mJ3FsrgPJEbg3zqtP7Yyu5XjxmsM1I</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_sign_out">Sing out</string>
    <string name="label_about">About</string>
    <string name="label_settings">Settings</string>
    <string name="label_my_connections">My connections</string>
    <string name="label_search">Search</string>
    <string name="label_discover">Discover</string>
    <string name="default_loading_message">Please wait</string>
    <string name="default_error_message">Something went wrong. Please try again later</string>
    <string name="hint_search_name">Name</string>
    <string name="default_empty_message">Nothing to show</string>
    <string name="label_filter">Filter</string>
    <string name="label_filter_by_status">By status</string>
    <string name="label_active">Active</string>
    <string name="label_inactive">Inactive</string>
    <string name="label_filter_by_trust">By trust</string>
    <string name="label_trusted">Trusted</string>
    <string name="label_others">Others</string>
    <string name="hint_password">Password</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_displayName">Enter your name</string>
    <string name="label_forgot_pw">Forgot password?</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_submit">Submit</string>
    <string name="label_profile">Profile</string>
    <string name="hint_password_confirm">Password confirm</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_incoming">Incoming requests</string>
    <string name="tab_outgoing">Outgoing requests</string>
    <string name="label_welcome">Welcome</string>
    <string name="email_reg_successful">Successful registration</string>
    <string name="email_reminder_sent">Email has been sent</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    <string name="default_profile_displayName">Unknown</string>
    <string name="label_accept">Accept</string>
    <string name="label_decline">Decline</string>
    <string name="error_format_search_keyword_length">Keyword must be at least %1d chars long</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="label_change_picture">Change picture</string>
    <string name="label_delete_account">Delete account</string>
    <string name="label_history">History</string>
    <string name="label_please_confirm">Please confirm</string>
    <string name="message_delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="error_permissions_required">You must provide all requested permissions to change profile picture</string>
    <string name="title_select_picture">Select picture</string>
    <string name="cancelled">Cancelled</string>
    <string name="avatar_change_failed">Failed to change profile picture</string>
    <string name="label_update">Update</string>
    <string name="pattern_connected_since">Connected since %1$s</string>
    <string name="pattern_request_sent_at">You have a pending request since %1$s</string>
    <string name="status_not_connected">Not yet connected. Send request now!</string>
    <string name="message_delete_connection">You\'re about to delete a connection. Are you sure?</string>
    <string name="label_yes">Yes</string>
    <string name="label_login_required">Please log in first</string>
    <string name="label_new_connection">New connection</string>
    <string name="label_new_connection_request">New connection request</string>
    <string name="label_new_notification">New notification</string>
    <string name="label_new_location_request">New location request</string>
    <string name="label_location_acquired">Location acquired</string>
    <string name="label_something_happened">Something happened :D</string>
    <string name="format_new_connection">%1$s is now connected with you</string>
    <string name="format_new_connection_request">%1$s wants to connect with you</string>
    <string name="format_new_location_request">%1$s wants to know your location</string>
    <string name="format_location_provided">%1$s has provided a location for you</string>
    <string name="label_currently_active">Currently active</string>
    <string name="format_last_seen">Last seen: %s</string>
    <string name="format_meters_away">%d m away</string>
    <string name="format_kilometers_away">%.2f km away</string>
    <string name="format_request_sent_on">Request sent on %s</string>
    <string name="format_request_sent_hours_ago">Request sent %s hours ago</string>
    <string name="label_tap_to_retry">Tap to retry</string>
    <string name="error_unknown_error_location">Couldn\'t send location</string>
    <string name="message_ok_location">Successfully sent location</string>
    <string name="notification_acquiring_location">Acquiring location…</string>
    <string name="my_position_title">Me</string>
    <string name="label_location_error">Location error</string>
    <string name="message_location_permission">Please grant permission to determine location</string>
    <string name="message_location_error_resolvable">Please help to solve location issues</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_offline">Offline</string>
    <string name="label_online">Online</string>
    <string name="notification_broadcast_title">Broadcasting location</string>
    <string name="notification_broadcast_message">Click to stop broadcast</string>
    <string name="label_stop_broadcast">Stop</string>
    <string name="broadcast_stopped">Stopped broadcasting location</string>

</resources>
