<?xml version="1.0" encoding="utf-8"?>
<hu.sztomek.wheresmybuddy.presentation.view.LoadingErrorConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <hu.sztomek.wheresmybuddy.presentation.view.SwipeRefreshEmptyView
        android:id="@+id/sreFriends"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter">
    </hu.sztomek.wheresmybuddy.presentation.view.SwipeRefreshEmptyView>

    <EditText
        android:id="@+id/etFilterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_search_name"
        app:layout_constraintEnd_toStartOf="@+id/cbTrusted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbTrusted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_trusted"
        app:layout_constraintBottom_toTopOf="@+id/btnFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFilterName" />

</hu.sztomek.wheresmybuddy.presentation.view.LoadingErrorConstraintLayout>