<?xml version="1.0" encoding="utf-8"?>
<hu.sztomek.wheresmybuddy.presentation.view.LoadingErrorConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leclRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:state="idle">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:srcCompat="@drawable/ic_profile" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/google_red"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_delete_account"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tvChangePicture"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvChangePicture" />

    <TextView
        android:id="@+id/tvChangePicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/filter_grey"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_change_picture"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        tools:text="Change picture" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:errorTextAppearance="@style/TIL.ErrorAppearance"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_displayName"
            android:inputType="textPersonName"
            tools:text="displayName" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePicture"
        tools:text="Update"
        android:text="@string/label_update"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

</hu.sztomek.wheresmybuddy.presentation.view.LoadingErrorConstraintLayout>