<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/filter_grey"
        android:drawableRight="@drawable/ic_filter"
        android:padding="8dp"
        android:text="@string/label_filter"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Filter" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clFilterExpanded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilter">

        <EditText
            android:id="@+id/etFilterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_search_name"
            android:inputType="textCapWords|textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/cbTrusted"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <CheckBox
            android:id="@+id/cbTrusted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"

            android:text="@string/label_trusted"
            app:layout_constraintBottom_toBottomOf="@+id/etFilterName"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/cbTrusted"
            tools:text="Filter"
            android:text="@string/label_filter"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>